--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:dev": "yarn test --watch"
   },
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
