--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "@vime/core": "^5.3.1",
+    "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
