--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
     "next": "12.0.7",
+    "next-share": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
