--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
+    "react-table": "^7.7.0",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "@types/react-table": "^7.7.9",
     "@types/styled-components": "5.1.18",
     "babel-jest": "27.4.5",
     "eslint": "8.5.0",
