--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "test": "jest --passWithNoTests",
     "test:dev": "yarn test --watch",
     "test:coverage": "jest --coverage"
@@ -15,6 +16,7 @@
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "next": "12.0.7",
     "next-share": "^0.12.2",
     "react": "17.0.2",
