--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
     "react-table": "^7.7.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "user-agents": "^1.0.884"
   },
   "devDependencies": {
     "@testing-library/dom": "8.11.1",
@@ -34,6 +35,7 @@
     "@types/react": "17.0.37",
     "@types/react-table": "^7.7.9",
     "@types/styled-components": "5.1.18",
+    "@types/user-agents": "^1.0.2",
     "babel-jest": "27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
