--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "mongoose": "^6.1.4",
     "next": "12.0.7",
     "next-share": "^0.12.2",
     "react": "17.0.2",
