--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
     "react-table": "^7.7.0",
+    "react-toastify": "^8.1.0",
     "styled-components": "5.3.3",
     "user-agents": "^1.0.884"
   },
