--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogu.live",
-  "version": "alpha2.1",
+  "version": "beta2.0.1",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,9 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.7",
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
