--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.0.7",
     "next-seo": "^4.28.1",
     "next-share": "^0.12.2",
+    "next-transpile-modules": "^9.0.0",
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
