--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "@types/react-dom": "^17.0.14",
     "@types/react-table": "^7.7.9",
     "@types/styled-components": "5.1.18",
     "@types/user-agents": "^1.0.2",
