--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vime/core": "^5.3.1",
     "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
+    "axios-extensions": "^3.1.3",
     "cheerio": "^1.0.0-rc.10",
     "mongoose": "^6.1.4",
     "next": "12.1.0",
